--- a/style.css
+++ b/style.css
@@ -37,3 +37,11 @@
 .ms-7 {
     margin-left: 12rem !important;
 }
+
+p {
+    font-family: 'Montserrat', serif;
+}
+
+h1,h2,h3,h4,h5,h6{
+    font-family: 'PT Serif', serif;
+}
